test/regress/coverage-wave2-annotate-err3.test
; Wave 2 coverage tests for annotate.cc error paths - duplicate tag
; Covers: duplicate tag (line 184)

2024/01/01 Dup Tag
    Assets:Test              1 FOO {$10.00} (tag1) (tag2)
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 5:
While parsing posting:
  Assets:Test              1 FOO {$10.00} (tag1) (tag2)
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Commodity specifies more than one tag
end test
